trabajando duro y parejo :D

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.10"
+    "@tailwindcss/vite": "^4.0.0",
+    "astro": "^5.1.10",
+    "tailwindcss": "^4.0.0"
   }
 }
